load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gebn/go-stamp
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "code.go",
        "doc.go",
        "summary.go",
    ],
    importpath = "github.com/gebn/go-stamp",
    visibility = ["//visibility:public"],
    x_defs = {
        "User": "{BUILD_USER}",
        "Host": "{BUILD_HOST}",
        "timestamp": "{BUILD_TIMESTAMP}",
        "Commit": "{STABLE_GIT_COMMIT}",
        "Branch": "{STABLE_GIT_BRANCH}",
        "Describe": "{STABLE_GIT_DESCRIBE}",
    },
)
