load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gebn/go-stamp/v2
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "code.go",
        "doc.go",
        "summary.go",
    ],
    importpath = "github.com/gebn/go-stamp/v2",
    visibility = ["//visibility:public"],
    x_defs = {
        "User": "{BUILD_USER}",
        "Host": "{BUILD_HOST}",
        "timestamp": "{BUILD_TIMESTAMP}",
        "Commit": "{STABLE_STAMP_COMMIT}",
        "Branch": "{STABLE_STAMP_BRANCH}",
        "Version": "{STABLE_STAMP_VERSION}",
    },
)
