load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kingpin_lib",
    srcs = ["main.go"],
    importpath = "github.com/gebn/go-stamp/v2/examples/kingpin",
    visibility = ["//visibility:private"],
    deps = [
        "//:go-stamp",
        "@com_github_alecthomas_kingpin//:kingpin",
    ],
)

go_binary(
    name = "kingpin",
    embed = [":kingpin_lib"],
    visibility = ["//visibility:public"],
)
