load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "prometheus_lib",
    srcs = ["main.go"],
    importpath = "github.com/gebn/go-stamp/v2/examples/prometheus",
    visibility = ["//visibility:private"],
    deps = [
        "//:go-stamp",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "prometheus",
    embed = [":prometheus_lib"],
    visibility = ["//visibility:public"],
)
